--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fluentui/react-northstar": "^0.49.0",
     "@microsoft/teams-js": "^2.10.1",
+    "eslint": "7.11.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-router": "^5.3.4",
@@ -13,7 +14,7 @@
     "typescript": "^3.2.1"
   },
   "scripts": {
-    "start": "PORT=3978 HTTP=true react-scripts start",
+    "start": "SET PORT==3978 && SET HTTP=true && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.6",
+    "react-refresh": "^0.14.0"
   }
 }
